# planet_tracker

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  ChangeLog.md  Dockerfile  Dockerfile_nginx  Makefile  Pipfile  README.md  app.old.py  app.py  default.conf  docker-compose.yml  pyproject.toml  requirements.txt
.ebextensions/: 01_https.config  https.config
.github/workflows/: main.yml
.platform/nginx/conf.d/: https_custom.conf
client/: .babelrc  index.html  index.old.html  package-lock.json  package.json  webpack.config.dev.js  webpack.config.prod.js
client/src/: app.js  index.css  index.scss  util.js
client/src/components/: App.vue  AstronTextDisplay.vue  D3PolarPlot.vue  D3ToolTip.js  GeoLocationDisplay.vue  GeoLocationTimeDisplay.vue  TimeDisplay.vue
deprecated/static/src/js/: app.js  d3planet.js  planetTracker.js  util.js
public/: index.html
static/css/: styles.css
static/deprecated/: app.js  d3planet.js  logging.js  main.js  main_temp.js
static/js/: app.js  d3planet.js  logging.js  main.js  planetTracker.js  polarPlotD3.js  util.js
static/src/css/: styles.css
static/src/js/: app.js  d3planet.js  logging.js  planetTracker.js  polarPlotD3.js  util.js
templates/: index.html
