[tool.poetry]
name = "planet-tracker"
version = "3.0.0"
description = "Server for Planet Tracker web app"
authors = ["Dean Shaff <dean.shaff@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
ephem = "^3.7.7"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
gunicorn = "^20.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
